2008-07-08  Matthias Clasen  <mclasen@redhat.com>

	* gvolumemonitor.c:
	* gfile.c:
	* gvolume.c:
	* gmount.c: Documentation improvements.

2008-07-08  Matthias Clasen  <mclasen@redhat.com>

	* gio.symbols:
	* gmount.[hc]: Add g_mount_guess_content_type(). 

2008-07-06  David Zeuthen  <davidz@redhat.com>

	* gio.symbols:
	* gvolume.[ch]: Add new method g_volume_get_activation_root(). This
	is needed for easily handling adoption of foreign volumes by
	out-of-process volume monitors (#541793)

2008-07-06  David Zeuthen  <davidz@redhat.com>

	* gvolumemonitor.[ch]:
	* gunionvolumemonitor.c: Export the eject-button signal on the
	volume monitor class (#541794).

2008-07-06  Matthias Clasen  <mclasen@redhat.com>

	* gappinfo.c: More doc tweaks

2008-07-05  Matthias Clasen  <mclasen@redhat.com>

	* gappinfo.c: Clarify some docs

2008-07-03  Matthias Clasen  <mclasen@redhat.com>

	* gdesktopappinfo.c: Fix a stupid mistake.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.3 ===

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* gfilemonitor.c: Fix the build.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 536160 – Add g_file_monitor()

	* gio.symbols:
	* gfile.[hc]: Add g_file_monitor which can return either
	a file or a directory monitor.  Proposed by Behdad Esfahbod

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	536733 – gio build failure on Irix

	* glocalfile.c: Use a configure check for structfs.f_bavail.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 534639 – add g_desktop_app_info_new_from_keyfile

	* gio.symbols:
	* gdesktopappinfo.[hc]: Add a function to create a
	GDesktopAppInfo from a GKeyFile. Proposed by Josselin Mouette.

2008-07-02  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gappinfo.c: Fix ulink in doc to make gtk-doc happy.

2008-07-01  Matthias Clasen  <mclasen@redhat.com>

	* gunixmounts.c: Fix a doc typo.

2008-07-01  Cody Russell  <bratsche@gnome.org>

	* gio/gcontenttype.c: